--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ services:
   postgres:
     image: postgres:16.1
     environment:
-    - POSTGRES_DB=ProyectoBiblioteca
+    - POSTGRES_DB=proyectobiblioteca
     - POSTGRES_USER=postgres
-    - POSTGRES_PASSWORD=P4ssword!
+    - POSTGRES_PASSWORD=root
     ports:
-    - 5433:5432
+    - 5432:5432
